Manifest_files/busybox.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: busyboxpod
  name: busyboxpod
  namespace: dev
spec:
  containers:
  - image: busybox
    name: busyboxpod
    resources: {}
    command:
    - sleep
    - "4800"
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
