Manifest_files/multi-cont-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: multi-cont-pod
  name: multi-cont-pod
spec:
  containers:
  - image: nginx
    name: nginx-container
    resources: {}
  - image: redis
    name: redis-container
    resources: {}
  - image: consul
    name: consul-container
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
