Manifest_files/nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: haz-docs
  name: haz-docs
spec:
  containers:
  - image: nginx
    name: haz-docs
    ports:
    - containerPort: 80
    volumeMounts:
    - mountPath: /tmp
      name: emptystore
  volumes:
  - name: emptystore
    emptyDir: {}
