Manifest_files/pi-calculator.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: pi-calculator
  name: pi-calculator
spec:
  containers:
  - image: perl
    name: pi-calculator
    command: ["perl",  "-Mbignum=bpi", "-wle", "print bpi(2000)"]
