Manifest_files/podwithconfigmap.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginxpodconfigmap
  name: nginxpodconfigmap
spec:
  containers:
  - image: nginx
    name: nginxpodconfigmap
