Manifest_files/redispod.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    tier: DB
  name: pod6
  namespace: development
spec:
  containers:
  - image: redis
    name: pod6
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
