Manifest_files/sidecar-container.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: busybox-nginx
  name: busybox-nginx
spec:
  containers:
  - image: busybox
    name: busybox-container
    args: ["/bin/sh", "-c", "while true; do echo 'hello, i am main container' >> /var/log/index.html; sleep 4800;done"]
    volumeMounts:
    - mountPath: /var/log
      name: volume
  - image: nginx
    name: nginx-container
    volumeMounts:
    - mountPath: /usr/share/nginx/html
      name: volume
    ports:
    - name: web
      containerPort: 80
      protocol: TCP
  volumes:
  - name: volume
    emptyDir: {}
