Manifest_files/test1.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: pod-test01
  name: pod-test01
spec:
  containers:
  - image: nginx
    name: pod-test01
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
