Manifest_files/test2.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: pod-test02
  name: pod-test02
  namespace: dev
spec:
  containers:
  - image: nginx
    name: pod-test02
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
