Manifest_files/web-config-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: web-config-pod
  name: web-config-pod
spec:
  containers:
  - image: nginx
    name: web-config-pod
