Manifest_files/web-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: web-dep
    tier: frontend
  name: web-dep
  annotations:
   AppVersion: "3.4"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-dep
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: web-dep
    spec:
      containers:
      - image: nginx:1.7.9
        name: nginx
        ports:
        - containerPort: 80
        securityContext:
         runAsUser: 1000
