Manifest_files/network-policy-fubar.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-port-from-namespace
  namespace: fubar
spec:
  podSelector:
   matchLabels: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
       matchLabels:
        name: my-app
    - podSelector:
       matchLabels: {}
    ports:
    - protocol: TCP
      port: 80
